--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -19,6 +18,7 @@
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "vanilla-masker": "^1.2.0"
     }
 }
