--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/cardapio.css": "/css/cardapio.css",
     "/css/app.css": "/css/app.css",
     "/css/icheck-bootstrap.css": "/css/icheck-bootstrap.css",
     "/css/fontawesome.css": "/css/fontawesome.css"
